Tools/TestWebKitAPI/Tests/ios/ScrollViewScrollabilityTests.mm
@@ -115,7 +115,8 @@ TEST(ScrollViewScrollabilityTests, ScrollableWithOverflowHiddenAndVisibleUI)
     obscuredInsets.right = 0;
 
     [webView _setObscuredInsets:obscuredInsets];
-    [webView _overrideLayoutParametersWithMinimumLayoutSize:CGSizeMake(320, 406) maximumUnobscuredSizeOverride:CGSizeMake(320, 490)];
+    auto unobscuredLayoutSize = CGSizeMake(320, 406);
+    [webView _overrideLayoutParametersWithMinimumLayoutSize:unobscuredLayoutSize minimumUnobscuredSizeOverride:unobscuredLayoutSize maximumUnobscuredSizeOverride:CGSizeMake(320, 490)];
 
     [webView synchronouslyLoadHTMLString:nonScrollableDocumentMarkup];
     [webView waitForNextPresentationUpdate];
@@ -134,7 +135,8 @@ TEST(ScrollViewScrollabilityTests, ScrollableWithOverflowHiddenAndShrunkUI)
     obscuredInsets.right = 0;
 
     [webView _setObscuredInsets:obscuredInsets];
-    [webView _overrideLayoutParametersWithMinimumLayoutSize:CGSizeMake(viewHeight, 325) maximumUnobscuredSizeOverride:CGSizeMake(viewHeight, 375)];
+    auto unobscuredLayoutSize = CGSizeMake(viewHeight, 325);
+    [webView _overrideLayoutParametersWithMinimumLayoutSize:unobscuredLayoutSize minimumUnobscuredSizeOverride:unobscuredLayoutSize maximumUnobscuredSizeOverride:CGSizeMake(viewHeight, 375)];
 
     [webView synchronouslyLoadHTMLString:nonScrollableDocumentMarkup];
     [webView waitForNextPresentationUpdate];
